Adicionando mongoDB e docker-compose

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,7 @@ spring:
   application:
     name: transaction-svc
   mongodb:
-    host: localhost
-    port: 27017
-    username: admin
-    password: admin
+    uri: mongodb://admin:admin@localhost:27017
     database: transaction
+
 
