--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
 
