--- a/docker-compose-mongo.yml
+++ b/docker-compose-mongo.yml
@@ -2,11 +2,13 @@ version: "3.8"
 
 services:
   db:
+    image: mongo:4.2
     container_name: mong-dev
+    restart: unless-stopped
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_DATABASE=transaction
-      - MONGO_INIT_ROOT_PASSWORD=admin
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_INITDB_DATABASE: transaction
     ports:
       - "27017:27017"
 
