Adicionando CDI na aplicação para teste

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,4 +5,16 @@ spring:
     uri: mongodb://admin:admin@localhost:27017
     database: transaction
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, beans
+
+transaction:
+  validation:
+    enabled: true
+    banco: true
+    horario: true
+
 
