--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,20 @@
+server:
+  port: 8082
 spring:
   application:
     name: transaction-svc
-  mongodb:
-    uri: mongodb://admin:admin@localhost:27017
-    database: transaction
+  data:
+    mongodb:
+      uri: mongodb://admin:admin@localhost:27017
+      database: transaction
+  kafka:
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: ${spring.application.name}
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      auto-offset-reset: latest
+      enable-auto-commit: true
 
 management:
   endpoints:
@@ -18,3 +29,6 @@ transaction:
     horario: true
 
 
+app:
+  consumeTopic: transaction
+  returnTopic: transaction_validate
